--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.20.0",
     "vuex": "^3.6.2",
     "wangeditor": "^4.7.9"
   },
