--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,10 +13,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@elastic/search-ui": "^1.8.0",
     "axios": "^0.24.0",
     "element-ui": "^2.15.6",
     "store": "^2.0.12",
     "vue": "^2.5.2",
+    "vue-axios": "^3.4.0",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.20.0",
     "vuex": "^3.6.2",
