--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "echarts": "^5.2.2",
     "element-ui": "^2.15.6",
+    "lodash": "^4.17.21",
     "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-axios": "^3.4.0",
