--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "echarts-gl": "^2.0.8",
     "element-ui": "^2.15.6",
     "es6-promise": "^4.2.8",
+    "lodash": "^4.17.21",
     "qrcode": "^1.5.0",
     "store": "^2.0.12",
     "v-clipboard": "^2.2.3",
